# advent-of-code-2023

./: Cargo.toml
aoc/: Cargo.toml
aoc-macro/: Cargo.toml
aoc-macro/src/: lib.rs
aoc/src/: lib.rs
solutions/2015/: Cargo.toml
solutions/2016/: Cargo.toml
solutions/2017/: Cargo.toml
solutions/2018/: Cargo.toml
solutions/2019/: Cargo.toml
solutions/2020/: Cargo.toml
solutions/2021/: Cargo.toml
solutions/2022/: Cargo.toml
solutions/2023/: Cargo.toml
src/: lib.rs
