[workspace]

members = [
    "aoc-macro",
]

[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
itertools = "0.12.0"
lazy-regex = "3.1.0"
nom = "7.1.3"
pathfinding = "4.3.3"
petgraph = "0.6.4"
rayon = "1.8.0"
aoc-macro = { path = "aoc-macro" }
elv = "0.13.2"
